--- a/delmar-study.html
+++ b/delmar-study.html
@@ -41,10 +41,7 @@
            
             <h3 class="clearfix delmar-sections">Fall Countdown</h3>
             <p class="col-lg-6 description">Fall Season 2017 is an exciting one for Del Mar as they host the Breeders' Cup for the first time in history. The world's eyes were on the track so our content had to be spot on. I designed and executed our Fall Season countdown videos, a series of six videos using footage provided edited in After Effects. As is the nature of short form content the videos had to be produced quickly in a way that was easy to repeat.</p>
-            <div class="case-video intrinsic-container intrinsic-container-16x9">
-                <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2FDelMarRaces%2Fvideos%2F10155796959293331%2F&show_text=0&width=560" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe>
-            </div>
-            <div class="hidden-video intrinsic-container intrinsic-container-16x9">
+            <div class="col-xs-12 col-lg-6 embed-responsive embed-responsive-16by9">
                 <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2FDelMarRaces%2Fvideos%2F10155796959293331%2F&show_text=0&width=560" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe>
             </div>
 
