--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="content">
                 <h1>Who wants to see some work?</h1>
                 <div id="reel" class="intrinsic-container intrinsic-container-16x9">
-                    <iframe src="https://player.vimeo.com/video/245870678?title=0&byline=0&portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="col-lg-12"></iframe>
+                    <iframe src="https://player.vimeo.com/video/237904545?title=0&byline=0&portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="col-lg-12"></iframe>
                 </div>
             <h1 id="case-studies">Case Studies</h1>
             <h3>Click around, you know you want to...</h3>
@@ -71,10 +71,11 @@
         <div id="contact" class="col-xs-12 clearfix">
             <h1>Let's get in touch</h1>
             <a href="img/resume.pdf"><h3>Download my resume</h3></a>
-            <form>
+            <h3>Email me! robmsimon@gmail.com</h3></a>
+            <!--<form>
                 <input class="col-lg-4" type="name" placeholder="YOUR NAME">
                 <input class="col-lg-4 clearfix" type="email" placeholder="EMAIL">
-            </form>
+            </form>-->
         </div>
     </div>
 
@@ -87,10 +88,10 @@
             </div>
             <div class="col-xs-6 col-md-2" data-aos="fade-up">
                 <h3>Social Media</h3>
-                <img src="img/ig.png">
-                <img src="img/tw.png">
-                <img src="img/lk.png">
-                <img src="img/pi.png">
+                <a href="https://www.instagram.com/rockinrobin1220/"><img src="img/ig.png"></a>
+                <a href="https://twitter.com/Robinn1220"><img src="img/tw.png"></a>
+                <a href="https://www.linkedin.com/in/robin-simon-29b35a122/"><img src="img/lk.png"></a>
+                <a href="https://www.pinterest.com/robin4996/"><img src="img/pi.png"></a>
             </div>
         </footer>
 
