--- a/jib-study.html
+++ b/jib-study.html
@@ -19,13 +19,6 @@
     </head>
     <body>
         <div class="case-study-page">
-            <div class="case-study-buttons">
-                <a href=#jib><div class="study-button"></div></a>
-                <a href=#vmas><div class="study-button"></div></a>
-                <a href=#blizzcon><div class="study-button"></div></a>
-                <a href=#chatbot><div class="study-button"></div></a>
-                <a href=#poker><div class="study-button"></div></a>
-            </div>
 
             <a href="index.html#case-studies"><div class="go-back">
                 <p>RETURN TO SITE</p>
@@ -43,10 +36,7 @@
                         <p class="description">Jack in the Box is a client that likes to stay in the know, and on top of social trends. Leading up to the VMAs they wanted a piece of content that was culturally relevant. After some back and fourth with the client we decided on a spoof of the Hotline Bling music video. What better than a Drake living in a Jack in the Box sign saucin' some buttery jacks? Nothing. </p>
                         <h4 class="clearfix quote">"What better than a Drake living in a Jack in the Box sign saucin' some buttery jacks? Nothing."</h4>
                     </div>
-                    <div class="case-video intrinsic-container intrinsic-container-16x9">
-                        <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fjackinthebox%2Fvideos%2F10153818662527304%2F&show_text=0&width=560" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe>
-                    </div>
-                    <div class="hidden-video intrinsic-container intrinsic-container-16x9">
+                    <div class="col-xs-12 col-lg-6 embed-responsive embed-responsive-16by9">
                         <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fjackinthebox%2Fvideos%2F10153818662527304%2F&show_text=0&width=560" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe>
                     </div>
             </div>
@@ -57,10 +47,7 @@
                     <p class="description">BlizzCon is a huge event in the gaming community taking place in Southern California. Jack, as usual, had to be a part of it. After doing some research on what games were hot and consulting some of the close gamers in my life I went for a battle scene. Because WWII era planes are cool and they're even cooler when they shoot lasers and they're even cooler than that when hamburgers are the pilots. Moving on...</p>
                     <h4 class="clearfix quote">"...and they're even cooler than that when hamburgers are the pilots. Moving on..."</h4>
                 </div>
-                <div class="case-video intrinsic-container intrinsic-container-16x9">
-                        <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fjackinthebox%2Fvideos%2F10154014911087304%2F&show_text=0&width=560" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe>
-                </div>
-                <div class="hidden-video intrinsic-container intrinsic-container-16x9">
+                <div class="col-xs-12 col-lg-6 embed-responsive embed-responsive-16by9">
                         <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fjackinthebox%2Fvideos%2F10154014911087304%2F&show_text=0&width=560" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe>
                 </div>
                 
@@ -87,10 +74,7 @@
                     <p class="description">Keeping with their traditon with keeping up with pop culture JIB wanted a social piece for the World Series of Poker. They once had a live action version of this video from years ago and wanted to recreate it. (View it here: https://www.youtube.com/watch?v=tXH5HL8ppxw) I put a modern twist on it and portrayed an animated Jack as quite the poker player. Who knew a white circle could have such a poker face?</p>
                     <h4 class="clearfix quote">"Who knew a white circle could have such a poker face?"</h4>
                 </div>
-                <div class="case-video intrinsic-container intrinsic-container-16x9">
-                        <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fjackinthebox%2Fvideos%2F10154728339122304%2F&show_text=0&width=560" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe>
-                </div>
-                <div class="hidden-video intrinsic-container intrinsic-container-16x9">
+                <div class="col-xs-12 col-lg-6 embed-responsive embed-responsive-16by9">
                         <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fjackinthebox%2Fvideos%2F10154728339122304%2F&show_text=0&width=560" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe>
                 </div>
             </div>
