--- a/mlr-study.html
+++ b/mlr-study.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html class="no-js" lang="">
     <head>
@@ -23,7 +22,7 @@
             <a href="index.html#case-studies"><div class="go-back">
                 <p>RETURN TO SITE</p>
             </div></a>
-                <h1 class="case-study-title">HOLD UP, CASE STUDY COMING SOON!</h1>
+                <h1 class="case-study-title">Modeling, Lighting, and Rendering</h1>
                 <p class="description col-xs-12 col-sm-12 col-md-6">Check out some of my still work in 3D. Included in this page are full scale projects as well as just some fun experimental work! Enjoy.</p>
             
 
