--- a/mlr-study.html
+++ b/mlr-study.html
@@ -25,48 +25,51 @@
                 <h1 class="case-study-title">Modeling, Lighting, and Rendering</h1>
                 <p class="description col-xs-12 col-sm-12 col-md-6">Check out some of my still work in 3D. Included in this page are full scale projects as well as just some fun experimental work! Enjoy.</p>
             
-
-            <h3 class="clearfix">Trouble in Paradise</h3>
-            <div class="col-sm-12 col-lg-6">
-                <p class="description">This piece was created initally for a final project. The goal was to tell a story in just 5 frames. I went for the classic guy watching TV and antsy wife annoyed that she isn't the center of attention.</p>
+            <div class="mlr-section">
+                <h3 class="clearfix">Trouble in Paradise</h3>
+                <div class="col-sm-12 col-lg-6">
+                    <p class="description">This piece was created initally for a final project. The goal was to tell a story in just 5 frames. I went for the classic guy watching TV and antsy wife annoyed that she isn't the center of attention.</p>
+                </div>
+                <p class="clearfix caption">Process</p>
+                <img class="clearfix col-xs-12 col-md-4" src="img/mlr-1.png">
+                <img class="col-xs-12 col-md-4" src="img/mlr-2.png">
+                <img class="col-xs-12 col-md-4" src="img/mlr-3.png">
+                <p class="clearfix caption">5 Frame Story</p>
+                <img class="clearfix col-xs-12 col-md-6" src="img/mlr-4.png">
+                <img class="col-xs-12 col-md-6" src="img/mlr-5.png">
+                <img class="clearfix col-xs-12 col-md-6" src="img/mlr-6.png">
+                <img class="col-xs-12 col-md-6" src="img/mlr-7.png">
+                <img class="clearfix col-xs-12 col-md-6" src="img/mlr-8.png">
             </div>
-            <p class="clearfix caption">Process</p>
-            <img class="clearfix col-xs-12 col-md-4" src="img/mlr-1.png">
-            <img class="col-xs-12 col-md-4" src="img/mlr-2.png">
-            <img class="col-xs-12 col-md-4" src="img/mlr-3.png">
-            <p class="clearfix caption">5 Frame Story</p>
-            <img class="clearfix col-xs-12 col-md-6" src="img/mlr-4.png">
-            <img class="col-xs-12 col-md-6" src="img/mlr-5.png">
-            <img class="clearfix col-xs-12 col-md-6" src="img/mlr-6.png">
-            <img class="col-xs-12 col-md-6" src="img/mlr-7.png">
-            <img class="clearfix col-xs-12 col-md-6" src="img/mlr-8.png">
 
-
-            <h3 class="clearfix">Hunger</h3>
-            <div class="col-sm-12 col-lg-6">
-                <p class="description">This piece was also created initally for a final project. I wanted to work on a bunch of skills with this piece so below you'll see some inital passes at digital painting, and some advanced organic modeling. Of course my inspiration was my own dog and home.</p>
+            <div class="mlr-section">
+                <h3 class="clearfix">Hunger</h3>
+                <div class="col-sm-12 col-lg-6">
+                    <p class="description">This piece was also created initally for a final project. I wanted to work on a bunch of skills with this piece so below you'll see some inital passes at digital painting, and some advanced organic modeling. Of course my inspiration was my own dog and home.</p>
+                </div>
+                <p class="clearfix caption">Process</p>
+                <img class="col-xs-12 col-md-3" src="img/mlr-9.jpg">
+                <img class="col-xs-12 col-md-3" src="img/mlr-10.png">
+                <img class="col-xs-12 col-md-3" src="img/mlr-11.png">
+                <img class="col-xs-12 col-md-3" src="img/mlr-12.png">
+                <p class="clearfix caption">Final</p>
+                <img class="col-xs-12 col-md-8 col-md-push-2" src="img/mlr-13.png">
             </div>
-            <p class="clearfix caption">Process</p>
-            <img class="col-xs-12 col-md-3" src="img/mlr-9.jpg">
-            <img class="col-xs-12 col-md-3" src="img/mlr-10.png">
-            <img class="col-xs-12 col-md-3" src="img/mlr-11.png">
-            <img class="col-xs-12 col-md-3" src="img/mlr-12.png">
-            <p class="clearfix caption">Final</p>
-            <img class="col-xs-12 col-md-8 col-md-push-2" src="img/mlr-13.png">
 
+            <div class="mlr-section">
+                <h3 class="clearfix">Bunhead</h3>
+                <div class="col-sm-12 col-lg-6">
+                    <p class="description">This piece was completed in just about an hour. Just a fun little piece playing with sweeps in Cinema 4D and lighting.</p>
+                </div>
+                <img class="clearfix col-xs-12 col-md-4" src="img/mlr-14.png">
+                <img class="col-xs-12 col-md-8" src="img/mlr-15.png">
 
-
-            <h3 class="clearfix">Bunhead</h3>
-            <div class="col-sm-12 col-lg-6">
-                <p class="description">This piece was completed in just about an hour. Just a fun little piece playing with sweeps in Cinema 4D and lighting.</p>
+                <h3 class="clearfix">Miscellaneous</h3>
+                <div class="col-sm-12 col-lg-6">
+                    <p class="description">Some other work with less background information, just plain fun!</p>
+                </div>
             </div>
-            <img class="clearfix col-xs-12 col-md-4" src="img/mlr-14.png">
-            <img class="col-xs-12 col-md-8" src="img/mlr-15.png">
-
-            <h3 class="clearfix">Miscellaneous</h3>
-            <div class="col-sm-12 col-lg-6">
-                <p class="description">Some other work with less background information, just plain fun!</p>
-            </div>
+            
             <img class="clearfix col-xs-6 col-md-4" src="img/mlr-16.png">
             <img class="col-xs-6 col-md-4" src="img/mlr-17.png">
             <img class="col-xs-6 col-md-4" src="img/mlr-18.png">
