lots of changes

--- a/bch-study.html
+++ b/bch-study.html
@@ -28,38 +28,45 @@
                 <p class="description col-xs-12 col-sm-12 col-md-6">The Digital Media and Design Department at UConn created a 20 foot interactive wall at BCH. This wall stands in the middle of the lobby in front of an open area surrounded by Microsoft Kinects. The motion of passerbys is captured and triggers anything from animations on screen to the person taking on a character themselves. I worked on the BCH project for two full years until the end of our contract with the hospital. This was one of the most rewarding things I have ever done and proved to me that art can make the biggest difference.</p>
             
 
-            <h3 class="clearfix">Monsters Scene</h3>
+            <h3 class="clearfix bch-section">Monsters Scene</h3>
             <div class="col-sm-12 col-lg-6">
                 <p class="description">The Monster's Scene took almost a full year to complete from ideation to execution. There were so many moving parts and challenges. We had to invent, draw, model, rig and animate the characters each with their own personality. The aim of this game was to have children and guest walk by the wall and have their motion trigger the opening of doors. Each character had a 'peek' animation as well as a 'pop' animation played when the user remained in the same spot. </p>
             </div>
             <p class="clearfix caption">A sample of a character breakdown sheet</p>
-            <p class="caption-sub">(Created by project manager Hunter French)</p>
+            <p class="caption-sub">Breakdown sheets created by project manager Hunter French</p>
             <img class="clearfix col-xs-12 col-md-6" src="img/bch-1.png">
             <img class="col-xs-12 col-md-6" src="img/bch-2.png">
             <p class="clearfix caption">An inital model</p>
+            <p class="caption-sub">Twiggy (left) was modeled by team member Jared Fishler</p>
             <img class="clearfix col-xs-12 col-md-6" src="img/bch-3.png">
+            <img class="col-xs-12 col-md-6" src="img/bch-4.png">
             <p class="clearfix caption">Rigged and Animated</p>
+            <p class="caption-sub">Both characters were rigged and animated by me</p>
             <img class="clearfix col-xs-12 col-md-6" src="img/bch-4.gif">
             <img class="col-xs-12 col-md-6" src="img/bch-5.gif">
             <p class="clearfix caption">In practice</p>
+            <div class="intrinsic-container intrinsic-container-16x9">
+                    <iframe src="https://player.vimeo.com/video/249572378?title=0&byline=0&portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="col-lg-12"></iframe>
+                </div>
 
-
-            <h3 class="clearfix">Birds Scene</h3>
+            <h3 class="clearfix bch-section">Birds Scene</h3>
             <div class="col-sm-12 col-lg-6">
                 <p class="description">The birds scene featured birds from around the world sitting on telephone wire. As people walked by the birds they walked over would play an animation and chirp. Each bird had an idle that would play every so often and an action.</p>
             </div>
             <p class="clearfix caption">My Birds</p>
-            <img class="col-xs-3 col-md-2" src="img/bch-7.png">
             <img class="col-xs-3 col-md-2" src="img/bch-7.gif">
             <img class="col-xs-3 col-md-2" src="img/bch-8.gif">
             <img class="col-xs-3 col-md-2" src="img/bch-9.gif">
             <img class="col-xs-3 col-md-2" src="img/bch-10.gif">
             <img class="col-xs-3 col-md-2" src="img/bch-11.gif">
             <p class="clearfix caption">In practice</p>
+            <div class="intrinsic-container intrinsic-container-16x9">
+                    <iframe src="https://player.vimeo.com/video/249575480?title=0&byline=0&portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="col-lg-12"></iframe>
+                </div>
 
 
 
-            <h3 class="clearfix">Matching Game</h3>
+            <h3 class="clearfix bch-section">Matching Game</h3>
             <div class="col-sm-12 col-lg-6">
                 <p class="description">The Matching Game was a simple concept that encouraged teamwork and communication. When one user highlighted a card and flipped it over another person would flip card until they found the match. I created all of the iconography. </p>
             </div>
@@ -67,6 +74,9 @@
             <img class="clearfix col-xs-12 col-md-8" src="img/bch-6.png">
             <img class="col-xs-12 col-md-4" src="img/bch-5.png">
             <p class="clearfix caption">In practice</p>
+            <div class="intrinsic-container intrinsic-container-16x9">
+                    <iframe src="https://player.vimeo.com/video/249573383?title=0&byline=0&portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="col-lg-12"></iframe>
+                </div>
 
 
 
