--- a/character-study.html
+++ b/character-study.html
@@ -26,14 +26,44 @@
                 <p class="description col-xs-12 col-sm-12 col-md-6">The following are character animation works I've done. In some instances the rigs were given to me but others I've rigged myself.</p>
 
            
-            <h3 class="clearfix delmar-sections">The Easter Bunny</h3>
+            <h3 class="clearfix delmar-sections">The Easter Bunny 2017</h3>
             <p class="col-lg-6 description">A lot of hard work and development went into this character. Initially it was created for a rigging class, the model was given and our assignment was to make a comprehensive rig and do a 30 second test animation. The second I saw the model the plotline struck me and I created The Easter Bunny. I created the baseline script and used a friend for the voice acting.</p>
-            <div class="case-video intrinsic-container intrinsic-container-16x9">
-                <iframe src="https://vimeo.com/199725834" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe>
-            </div>
-            <div class="hidden-video intrinsic-container intrinsic-container-16x9">
-                <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2FDelMarRaces%2Fvideos%2F10155796959293331%2F&show_text=0&width=560" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe>
-            </div>
+            <p class="clearfix"></p>
+            <div class="intrinsic-container intrinsic-container-16x9">
+                    <iframe src="https://player.vimeo.com/video/199725834?title=0&byline=0&portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="col-lg-12"></iframe>
+                </div>
+
+            <h3 class="clearfix delmar-sections">Sugar Scope Cereal 2015</h3>
+            <p class="col-lg-6 description">This was created to experiment with different aspects of the program Cinema 4D. I wanted to capture the essence of the imagination of a child in this commercial for a magical cereal.</p>
+            <p class="clearfix"></p>
+            <div class="intrinsic-container intrinsic-container-16x9">
+                    <iframe src="https://player.vimeo.com/video/166062971?title=0&byline=0&portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="col-lg-12"></iframe>
+                </div>
+
+
+            <h3 class="clearfix delmar-sections">Dinosaur Rig & Animation</h3>
+            <p class="col-lg-6 description">Animation and rig done by myself. This was just a short animation to test out how my rig was working in C4D.</p>
+            <p class="clearfix"></p>
+            <div class="intrinsic-container intrinsic-container-16x9">
+                    <iframe src="https://player.vimeo.com/video/199727132?title=0&byline=0&portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="col-lg-12"></iframe>
+                </div>
+
+
+            <h3 class="clearfix delmar-sections">Chipmunk</h3>
+            <p class="col-lg-6 description">Animation and rigging done by myself. Dynamics applied to shirt. Created for use in a game featured currently on Boston Children's Hospital's interactive wall. In the game the character peeks and pops through a door as it is triggered by passerby's movement. C4D</p>
+            <p class="clearfix"></p>
+            <div class="intrinsic-container intrinsic-container-16x9">
+                    <iframe src="https://player.vimeo.com/video/199726588?title=0&byline=0&portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="col-lg-12"></iframe>
+                </div>
+
+
+            <h3 class="clearfix delmar-sections">Twiggy</h3>
+            <p class="col-lg-6 description">Animation and rigging done by myself. Created for use in a game featured currently on Boston Children's Hospital's interactive wall. In the game the character peeks and pops through a door as it is triggered by passerby's movement. C4D</p>
+            <p class="clearfix"></p>
+            <div class="intrinsic-container intrinsic-container-16x9">
+                    <iframe src="https://player.vimeo.com/video/249577188?title=0&byline=0&portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="col-lg-12"></iframe>
+                </div>
+
 
         </div>
     </body>
