--- a/index.html
+++ b/index.html
@@ -33,25 +33,26 @@
 
         <div id="about">
             <div id="about-content" class="col-xs-12">
-            <h1 data-aos="fade-up">YO.</h1>
-                <p data-aos="fade-up" class="col-xs-12 col-md-12 col-lg-6">I’m Robin Simon, a senior at the University of Connecticut majoring in Digital Media and Design. I concentrate in 3D animation but have experience in everything from motion graphics to projection mapping. I want to use my skills to create content that exceeds client expectations. My educational and work experience have trained me to live outside my comfort zone. I thrive in an atmosphere where I am challenged to go beyond my current skill set. With every project comes a different approach, a different program to learn, a new platform. These changes excite me instead of intimidate, and allow me to learn how to be adaptable.
-                <br>
-                <br>
+            <h1 data-aos="fade-up">Get to know me, then hire me!</h1>
+                <p data-aos="fade-up" class="col-xs-12 col-md-12 col-lg-6">I’m Robin Simon, and I just graduated from the University of Connecticut in 3 and a half years with a major in Digital Media and Design. I concentrate primarily in 3D animation but have experience with everything from motion graphics to projection mapping. I want to use my skills to create content that goes beyond client expectations. My educational and work experience have conditioned me to live outside my comfort zone. I thrive in an atmosphere where I am challenged to go beyond my current skill set. With every project comes a different approach, a different program to learn, a new platform. These changes excite me instead of intimidate, and allow me to learn how to be adaptable.
+                <br><br>
+                I love to meet new people specifically because I can tell them the jokes all my other friends are sick of hearing.
+                <br><br>
                 One of my unrelated talents is clapping very loudly. Like I can clap really loud, I am the ideal audience member.</p>
                 <div class="about-img col-xs-12 col-sm-12 col-md-6 col-lg-6">
-                    <img src="img/me.jpg" data-aos="zoom-in-left" class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                    <img src="img/me.png" data-aos="zoom-in-left" class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                 </div>
             </div>
         </div>
 
         <div id="work" class="clearfix col-xs-12">
             <div class="content">
-                <h1>Who wants to see some work?</h1>
+                <h1 data-aos="fade-up">Who wants to see some work?</h1>
                 <div id="reel" class="intrinsic-container intrinsic-container-16x9">
                     <iframe src="https://player.vimeo.com/video/245870678?title=0&byline=0&portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="col-lg-12"></iframe>
                 </div>
-            <h1 id="case-studies">Case Studies</h1>
-            <h3>Click around, you know you want to...</h3>
+            <h1 id="case-studies" data-aos="fade-up">Case Studies: A Deeper Dive into my Work</h1>
+            <h3 data-aos="fade-up">Click around, you know you want to...</h3>
             <a href="jib-study.html"><div class="case-studies jib col-xs-6 col-md-4" data-aos="zoom-in">
             </div></a>
             <a href="delmar-study.html"><div class="case-studies delmar col-xs-6 col-md-4" data-aos="zoom-in">
@@ -64,8 +65,8 @@
             </div></a>
             <a href="character-study.html"><div class="case-studies character col-xs-6 col-md-4" data-aos="zoom-in">
             </div></a>
-            <div class="case-studies motion col-xs-6 col-md-4" data-aos="zoom-in">
-            </div>
+            <a href="motion-study.html"><div class="case-studies motion col-xs-6 col-md-4" data-aos="zoom-in">
+            </div></a>
         </div>
 
         <div id="contact" class="col-xs-12 clearfix">
