--- a/mlr-study.html
+++ b/mlr-study.html
@@ -35,11 +35,55 @@
             <img class="col-xs-12 col-md-4" src="img/mlr-2.png">
             <img class="col-xs-12 col-md-4" src="img/mlr-3.png">
             <p class="clearfix caption">5 Frame Story</p>
-            <img class="clearfix col-xs-12 col-md-6" src="img/mlr-4.png">
-            <img class="col-xs-12 col-md-6" src="img/mlr-5.png">
-            <img class="clearfix col-xs-12 col-md-6" src="img/mlr-6.png">
-            <img class="col-xs-12 col-md-6" src="img/mlr-7.png">
-            <img class="clearfix col-xs-12 col-md-6" src="img/mlr-8.png">
+
+<!-- Slideshow container -->
+<div class="slideshow-container">
+
+  <!-- Full-width images with number and caption text -->
+  <div class="mySlides ">
+    <div class="numbertext">1 / 3</div>
+    <img src="img/mlr-4.png" style="width:100%">
+    <div class="text">frame one</div>
+  </div>
+
+  <div class="mySlides ">
+    <div class="numbertext">2 / 3</div>
+    <img src="img/mlr-5.png" style="width:100%">
+    <div class="text">frame two</div>
+  </div>
+
+  <div class="mySlides ">
+    <div class="numbertext">3 / 3</div>
+    <img src="img/mlr-6.png" style="width:100%">
+    <div class="text">frame three</div>
+  </div>
+
+  <div class="mySlides ">
+    <div class="numbertext">3 / 3</div>
+    <img src="img/mlr-7.png" style="width:100%">
+    <div class="text">frame four</div>
+  </div>
+
+  <div class="mySlides ">
+    <div class="numbertext">3 / 3</div>
+    <img src="img/mlr-8.png" style="width:100%">
+    <div class="text">frame five</div>
+  </div>
+
+  <!-- Next and previous buttons -->
+  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div>
+<br>
+
+
+
+
+            <img class="clearfix col-xs-12 col-md-2 col-md-push-1" src="img/mlr-4.png">
+            <img class="col-xs-12 col-md-2 col-md-push-1" src="img/mlr-5.png">
+            <img class="col-xs-12 col-md-2 col-md-push-1" src="img/mlr-6.png">
+            <img class="col-xs-12 col-md-2 col-md-push-1" src="img/mlr-7.png">
+            <img class="col-xs-12 col-md-2 col-md-push-1" src="img/mlr-8.png">
 
 
             <h3 class="clearfix mlr-section">Hunger</h3>
@@ -75,5 +119,34 @@
             <img class="col-xs-6 col-md-4" src="img/mlr-21.png">
 
         </div>
+<script>var slideIndex = 1;
+showSlides(slideIndex);
+
+// Next/previous controls
+function plusSlides(n) {
+  showSlides(slideIndex += n);
+}
+
+// Thumbnail image controls
+function currentSlide(n) {
+  showSlides(slideIndex = n);
+}
+
+function showSlides(n) {
+  var i;
+  var slides = document.getElementsByClassName("mySlides");
+  var dots = document.getElementsByClassName("dot");
+  if (n > slides.length) {slideIndex = 1} 
+  if (n < 1) {slideIndex = slides.length}
+  for (i = 0; i < slides.length; i++) {
+      slides[i].style.display = "none"; 
+  }
+  for (i = 0; i < dots.length; i++) {
+      dots[i].className = dots[i].className.replace(" active", "");
+  }
+  slides[slideIndex-1].style.display = "block"; 
+  dots[slideIndex-1].className += " active";
+}</script>
+
     </body>
 </html>
