--- a/character-study.html
+++ b/character-study.html
@@ -66,6 +66,24 @@
 
 
         </div>
+
+        <footer class="clearfix">
+            <div class="col-xs-6 col-md-2">
+                <h3>Contact Me</h3>
+                <p>Robin Simon</p>
+                <p>robmsimon@gmail.com</p>
+                <p><a href="https://vimeo.com/user48200545">My vimeo channel</a></p>
+                <p><a href="https://www.behance.net/robmsimona2dc">Check me out on Behance!</a></p>
+            </div>
+            <div class="col-xs-6 col-md-2">
+                <h3>Social Media</h3>
+                <a href="https://www.instagram.com/rockinrobin1220/"><img src="img/ig.png"></a>
+                <a href="https://twitter.com/Robinn1220"><img src="img/tw.png"></a>
+                <a href="https://www.linkedin.com/in/robin-simon-29b35a122/"><img src="img/lk.png"></a>
+                <a href="https://www.pinterest.com/robin4996/"><img src="img/pi.png"></a>
+            </div>
+        </footer>
+        
     </body>
 </html>
         
