--- a/index.html
+++ b/index.html
@@ -34,12 +34,10 @@
         <div id="about">
             <div id="about-content" class="col-xs-12">
             <h1 data-aos="fade-up">Get to know me, then hire me!</h1>
-                <p data-aos="fade-up" class="col-xs-12 col-md-12 col-lg-6">I’m Robin Simon, and I just graduated from the University of Connecticut in 3 and a half years with a major in Digital Media and Design. I concentrate primarily in 3D animation but I have experience with everything from motion graphics to projection mapping. I am so pumped to join the professional digital space and use my skills to create content that goes far beyond client expectations. My educational and work experience have conditioned me to live outside my comfort zone. I thrive in an atmosphere where I am challenged to go beyond my current skill set. With every project comes a different approach, a different program to learn, a new platform. These changes excite me instead of intimidate, and allow me to learn how to be adaptable.
+                <p data-aos="fade-up" class="col-xs-12 col-md-12 col-lg-6"><strong>Some essential details:</strong> I’m Robin Simon, and I just graduated from the University of Connecticut in 3 and a half years with a major in Digital Media and Design. I concentrate primarily in 3D animation but I have experience with everything from motion graphics to projection mapping. I am so pumped to join the professional digital space and use my skills to create content that goes far beyond client expectations. My educational and work experience have conditioned me to live outside my comfort zone. I thrive in an atmosphere where I am challenged to go beyond my current skill set. With every project comes a different approach, a different program to learn, a new platform. These changes excite me instead of intimidate, and allow me to learn how to be adaptable.
                 <br><br>
-                Meeting new people is my jam specifically because I can tell them the jokes all my other friends are sick of hearing.
-                <br><br>
-                One of my unrelated talents is clapping very loudly. Like I can clap really loud, I am the ideal audience member.</p>
-                <div class="about-img col-xs-12 col-sm-12 col-md-6 col-lg-6">
+                <strong>Some fun facts:</strong> Meeting new people is my jam specifically because I can tell them the jokes all my other friends are sick of hearing. One of my unrelated talents is clapping very loudly. Like I can clap really loud, I am the ideal audience member.</p>
+                <div class="about-img col-xs-12 col-sm-12 col-md-12 col-lg-6">
                     <img src="img/me.png" data-aos="zoom-in-left" class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                 </div>
             </div>
@@ -71,8 +69,8 @@
 
         <div id="contact" class="col-xs-12 clearfix">
             <h1>Let's get in touch</h1>
-            <a href="img/resume.pdf"><h3>Download my resume</h3></a>
-            <h3>Email me! robmsimon@gmail.com</h3></a>
+            <a href="img/resume.pdf"><h3 id="download" style="color: white">Download my resume</h3></a>
+            <h3>Email me!<br> robmsimon@gmail.com</h3></a>
 
         </div>
     </div>
