--- a/mlr-study.html
+++ b/mlr-study.html
@@ -117,8 +117,27 @@
             <img class="col-xs-6 col-md-4" src="img/mlr-19.png">
             <img class="col-xs-6 col-md-4" src="img/mlr-20.png">
             <img class="col-xs-6 col-md-4" src="img/mlr-21.png">
+            <br><br>
 
         </div>
+
+        <footer class="clearfix">
+            <div class="col-xs-6 col-md-2">
+                <h3>Contact Me</h3>
+                <p>Robin Simon</p>
+                <p>robmsimon@gmail.com</p>
+                <p><a href="https://vimeo.com/user48200545">My vimeo channel</a></p>
+                <p><a href="https://www.behance.net/robmsimona2dc">Check me out on Behance!</a></p>
+            </div>
+            <div class="col-xs-6 col-md-2">
+                <h3>Social Media</h3>
+                <a href="https://www.instagram.com/rockinrobin1220/"><img src="img/ig.png"></a>
+                <a href="https://twitter.com/Robinn1220"><img src="img/tw.png"></a>
+                <a href="https://www.linkedin.com/in/robin-simon-29b35a122/"><img src="img/lk.png"></a>
+                <a href="https://www.pinterest.com/robin4996/"><img src="img/pi.png"></a>
+            </div>
+        </footer>
+
 <script>var slideIndex = 1;
 showSlides(slideIndex);
 
@@ -147,6 +166,5 @@ function showSlides(n) {
   slides[slideIndex-1].style.display = "block"; 
   dots[slideIndex-1].className += " active";
 }</script>
-
     </body>
 </html>
